# termtexture

./: .gitignore  CMakeLists.txt  README.md  meson.build
examples/: meson.build
examples/termtexture_imgui/: gui.cpp  gui.h  gui_widgets.cpp  main.cpp  meson.build
examples/textureterm/: main.cpp  meson.build
src/: CMakeLists.txt  glfw_window.cpp  glfw_window.h  gui.cpp  gui.h  gui_widgets.cpp  gui_widgets.h  main.cpp  meson.build  scene.cpp  scene.h
src/glfw_window/: glfw_window.cpp  glfw_window.h  meson.build
src/glfwterm/: common_pty.h  common_pty_windows.cpp  fbo.cpp  fbo.h  glfw_window.cpp  glfw_window.h  gui.cpp  gui.h  gui_widgets.cpp  gui_widgets.h  main.cpp  meson.build  texture.cpp  vterm_object.cpp  vterm_object.h
src/glo/: fbo.cpp  glo.cpp  meson.build  scene.cpp  scoped_binder.h  shader.cpp  shader.h  text.cpp  texture.cpp  triangle.cpp  triangle.h  ubo.cpp  vao.cpp  vbo.cpp
src/glo/include/: glo.h
src/glo/include/glo/: fbo.h  readallbytes.h  shader.h  texture.h  ubo.h  vao.h  vbo.h
src/glo/include/glo/scene/: drawable.h  text.h  triangle.h
src/glo/scene/: drawable.cpp  text.cpp  triangle.cpp
src/spirv_util/: meson.build  spirv_util.cpp  spirv_util.h
src/termtexture/: cellgrid.cpp  cellgrid.h  celltypes.h  cursor.cpp  cursor.h  fontatlas.cpp  fontatlas.h  meson.build  readallbytes.h  termtexture.cpp  termtexture.h  text.cpp  text.h  vterm_object.cpp  vterm_object.h
subprojects/: glslang.wrap  imgui.wrap  stb.wrap
subprojects/packagefiles/glslang/: meson.build
subprojects/packagefiles/imgui/: meson.build.patch
subprojects/packagefiles/stb/: meson.build
subprojects/packagefiles/vterm/: meson.build
